--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,7 @@ databases[postgresql]==0.5.3
 SQLAlchemy==1.4.26
 alembic==1.7.4
 starlette==0.16.0
+pytest==6.2.5
+pytest-asyncio==0.14.0
+httpx==0.16.1
+asgi-lifespan==1.0.1
