add webpack install -g to docker file

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile for dev
 FROM node:latest
 
-EXPOSE 3000
+RUN npm install webpack npm install webpack-cli -g
 
 RUN mkdir /frontend
 
@@ -10,5 +10,11 @@ COPY ./ ./frontend/
 WORKDIR /frontend
 
 RUN npm install --no-progress --ignore-optional
+
+RUN webpack
+
+ENV NODE_ENV=development
+
+EXPOSE 3000
 
 CMD npm start
