--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "uuid": "^7.0.3",
     "whatwg-fetch": "^3.6.2"
   }
 }
