--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "core-js": "^3.19.1",
+    "mobx": "^6.3.7",
+    "mobx-react": "^7.2.1",
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
