--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     restart: always
+    command: bash -c "webpack && npm start"
     volumes:
       - ./frontend/:/frontend/
     ports:
@@ -28,7 +29,7 @@ services:
     depends_on:
       - backend
 
-  db:
+  db_server:
     image: postgres:14
     restart: always
     volumes:
@@ -36,7 +37,7 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - "5432:5432"
+      - "db_port:db_port"
 
 volumes:
   postgres_data:
