--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,9 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "html-webpack-plugin": "^5.5.0",
     "core-js": "^3.19.1",
     "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
