--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,7 +1,7 @@
 SECRET_KEY
 
-MAIN_DB_USER
-MAIN_DB_PASSWORD
-MAIN_DB_SERVER
-MAIN_DB_PORT
-MAIN_DB_NAME
+POSTGRES_USER
+POSTGRES_PASSWORD
+POSTGRES_SERVER
+POSTGRES_PORT
+POSTGRES_DB
