--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - "db_port:db_port"
+      - "db_port:5432"
 
 volumes:
   postgres_data:
