--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     volumes:
       - ./backend/:/backend/
-    command: bash -c "alembic upgrade head && uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000"
+    command: bash -c "uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000"
     env_file:
       - ./backend/.env
     ports:
