--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     restart: always
     volumes:
       - ./frontend/:/frontend/
+    command: bash -c "webpack && npm start"
     ports:
       - "3000:3000"
     depends_on:
